hphp/test/zend/good/Zend/tests/magic_by_ref_005.php.expectf

Fatal error: Method test::__isset() cannot take arguments by reference in %s/magic_by_ref_005.php on line 4
